sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value x
while(x=0)
      ^AlgBubbleSort1:4: error: not found: value x
	x=0
        ^AlgBubbleSort1:8: error: not found: value x
			x=x+1
                        ^